clusters/seaweedfs-cluster/seaweedfs-csi-driver/seaweedfs-csi-driver-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seaweedfs-csi-driver
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
