clusters/seaweedfs-cluster/seaweedfs-csi-driver/seaweedfs-csi-driver-network-policy-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: controller-access
  namespace: seaweedfs-csi-driver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: seaweedfs
      app.kubernetes.io/managed-by: seaweedfs-operator
      app.kubernetes.io/name: seaweedfs-csi-driver
      io.kubernetes.pod.namespace: seaweedfs-csi-driver
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
