clusters/seaweedfs-cluster/seaweedfs-csi-driver/seaweedfs-csi-driver-network-policy-mount.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mount-access
  namespace: seaweedfs-csi-driver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: mount
      app.kubernetes.io/instance: seaweedfs
      app.kubernetes.io/managed-by: seaweedfs-operator
      app.kubernetes.io/name: seaweedfs-csi-driver
      io.kubernetes.pod.namespace: seaweedfs-csi-driver
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: volume
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
          matchExpressions:
          - key: io.kubernetes.pod.namespace
            operator: Exists
      toPorts:
        - ports:
            - port: "8444"
              protocol: TCP
            - port: "18444"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: filer
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
          matchExpressions:
          - key: io.kubernetes.pod.namespace
            operator: Exists
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
            - port: "18888"
              protocol: TCP
